--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,11 @@
   scroll-behavior: smooth;
   @import url('https://fonts.cdnfonts.com/css/general-sans');
 }
+
+.font-generaLsans {
+  font-family: 'General Sans', sans-serif;
+}
+
 .fondo{
   background-color: #0c0c0c;
 }
@@ -89,29 +94,16 @@ body {
     @apply cursor-pointer flex justify-center items-center gap-2;
   }
 
-  /* projects section  
+   /*projects section  */
   .arrow-btn {
-    @apply w-10 h-10 p-3 cursor-pointer active:scale-95 transition-all rounded-full arrow-gradient;
-  }*/
+    @apply w-10 h-10 p-3 cursor-pointer active:scale-95 transition-all rounded-full;
+  }
 
   .tech-logo {
-    @apply w-10 h-10 rounded-md p-2 bg-neutral-100 bg-opacity-10 backdrop-filter backdrop-blur-lg flex justify-center items-center;
+    @apply w-13 h-10 rounded-md p-2 backdrop-filter backdrop-blur-lg flex justify-center items-center;
   }
 
-  /* clients section 
-  .client-container {
-    @apply grid md:grid-cols-2 grid-cols-1 gap-5 mt-12;
-  }
-
-  .client-review {
-    @apply rounded-lg md:p-10 p-5 col-span-1 bg-black-300 bg-opacity-50;
-  }
-
-  .client-content {
-    @apply flex lg:flex-row flex-col justify-between lg:items-center items-start gap-5 mt-7;
-  }
-
-  /*  work experience section 
+    /*  work experience section 
   .work-container {
     @apply grid lg:grid-cols-3 grid-cols-1 gap-5 mt-12;
   }
@@ -134,34 +126,34 @@ body {
 
   .work-content_bar {
     @apply flex-1 w-0.5 mt-4 h-full bg-black-300 group-hover:bg-black-500 group-last:hidden;
-  }
+  }*/
 
-  /* contact section 
+   /*contact section */
   .contact-container {
     @apply max-w-xl relative z-10 sm:px-10 px-5 mt-12;
   }
 
   .field-label {
-    @apply text-lg text-white-600;
+    @apply text-lg text-white;
   }
 
   .field-input {
-    @apply w-full bg-black-300 px-5 py-2 min-h-14 rounded-lg placeholder:text-white-500 text-lg text-white-800 shadow-black-200 shadow-2xl focus:outline-none;
+    @apply w-full bg-black px-5 py-2 min-h-14 rounded-lg placeholder:text-white text-lg text-white shadow-black opacity-35 shadow-2xl focus:outline-none;
   }
 
   .field-btn {
-    @apply bg-black-500 px-5 py-2 min-h-12 rounded-lg shadow-black-200 shadow-2xl flex justify-center items-center text-lg text-white gap-3;
+    @apply bg-black px-5 py-2 min-h-12 rounded-lg shadow-black shadow-2xl flex justify-center items-center text-lg text-white gap-3;
   }
 
   .field-btn_arrow {
     @apply w-2.5 h-2.5 object-contain invert brightness-0;
   }
 
-  /*  footer 
+  /*  footer */
   .social-icon {
-    @apply w-12 h-12 rounded-full flex justify-center items-center bg-black-300 border border-black-200;
+    @apply w-10 h-10 rounded-full flex justify-center items-center bg-black border border-black cursor-pointer hover:scale-120 transition duration-300;
   }
-    */
+  
 
 
 .waving-hand {
@@ -171,7 +163,7 @@ body {
   transform-origin: 70% 70%;
   display: inline-block;
 }
-/*
+
 
 .arrow-gradient {
   background-image: linear-gradient(
@@ -181,7 +173,7 @@ body {
     rgba(255, 255, 255, 0.000025) 50%,
     rgba(255, 255, 255, 0.025) 100%
   );
-}*/
+}
 
 @keyframes wave-animation {
   0% {
